--- a/src/App.less
+++ b/src/App.less
@@ -1,8 +1,11 @@
-#root {
+#app-root {
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
   // max-width: 1280px;
   // margin: 0 auto;
   // padding: 2rem;
-  text-align: center;
+  // text-align: center;
 }
 
 // .logo {
