--- a/src/components/infinite-image-carousel/index.less
+++ b/src/components/infinite-image-carousel/index.less
@@ -13,6 +13,13 @@
       background-color: #333;
       color: #fff;
       border-radius: 5px;
+      cursor: pointer;
+      border: 2px solid transparent;
+      transition: border-color 0.2s;
+
+      &-active {
+        border: 2px solid #ff9467;
+      }
     }
   }
 }
