feat: :sparkles: 增加数据

--- a/src/components/infinite-image-carousel/index.less
+++ b/src/components/infinite-image-carousel/index.less
@@ -9,7 +9,7 @@
     &-item {
       flex: 0 0 auto;
       margin: 10px 6px;
-      padding: 6px 12px;
+      padding: 6px;
       background-color: #333;
       color: #fff;
       border-radius: 5px;
@@ -18,7 +18,7 @@
       transition: border-color 0.2s;
 
       &-active {
-        border: 2px solid #ff9467;
+        border: 2px solid #af352a;
       }
     }
   }
