--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -3,6 +3,58 @@
   height: 100%;
   background-color: #000000;
   overflow: auto;
+  .tip {
+    display: flex;
+    align-items: center;
+    margin: 24px;
+    font-size: 14px;
+    line-height: 14px;
+    color: #888;
+
+    &::after {
+      content: "";
+      display: block;
+      flex: 1;
+      height: 1px;
+      margin-left: 8px;
+      background-color: #888;
+    }
+  }
+
+  .main {
+    position: relative;
+    &-title {
+      color: #fff;
+      h1 {
+        position: absolute;
+        margin: 0;
+        font-size: 60px;
+      }
+
+      &-1 {
+        top: 48px;
+        left: 90px;
+      }
+
+      &-2 {
+        position: absolute;
+        bottom: 48px;
+        right: 90px;
+        width: 50%;
+        text-align: right;
+      }
+
+      &-desc {
+        position: absolute;
+        left: 90px;
+        top: 20%;
+        width: 40%;
+        max-width: 300px;
+        // text-align: right;
+        font-size: 18px;
+      }
+    }
+  }
   .canvas {
     position: relative;
     ::before {
@@ -20,25 +72,6 @@
 
   .images {
     color: #fff;
-
-    &-tip {
-      display: flex;
-      align-items: center;
-      margin: 24px;
-      font-size: 14px;
-      line-height: 14px;
-      color: #888;
-
-      &::after {
-        content: "";
-        display: block;
-        flex: 1;
-        height: 1px;
-        margin-left: 8px;
-        background-color: #888;
-      }
-    }
-
     &-title {
       margin-left: 24px;
       margin-bottom: 32px;
@@ -86,6 +119,65 @@
       }
     }
 
+  }
+
+  .about {
+    color: #fff;
+    .tip {
+      flex-direction: row-reverse;
+      &::after {
+        margin-left: 0;
+        margin-right: 8px;
+      }
+    }
+    h3 {
+      margin: 16px 0;
+      text-align: center;
+      font-size: 30px;
+    }
+    p {
+      max-width: 1000px;
+      padding: 0 24px;
+      margin: 24px auto;
+      font-size: 14px;
+      color: #888;
+      text-align: center;
+    }
+
+    .websites {
+      padding: 24px;
+      &-item {
+        display: flex;
+        padding: 12px;
+        margin-bottom: 12px;
+        overflow: hidden;
+        column-gap: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 4px;
+        cursor: pointer;
+
+        &-img {
+          width: 120px;
+          height: 80px;
+          object-fit: contain;
+        }
+        &-content {
+          flex: 1;
+        }
+        &-title {
+          font-weight: 800;
+        }
+
+        &-desc {
+          color: #888;
+        }
+      }
+
+      &-item:nth-child(even) {
+        flex-direction: row-reverse;
+      }
+
+    }
   }
 
   &::-webkit-scrollbar {
