--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -45,13 +45,12 @@
       }
 
       &-desc {
-        position: absolute;
-        left: 90px;
-        top: 20%;
-        width: 40%;
+        // position: absolute;
         max-width: 300px;
         // text-align: right;
         font-size: 18px;
+        font-weight: 400;
+        line-height: 32px;
       }
     }
   }
@@ -123,6 +122,7 @@
 
   .about {
     color: #fff;
+    background: -webkit-linear-gradient(180deg, #000000,#7379ce,#ccd5ff);/* Chrome 10-25, Safari 5.1-6 */                          background: linear-gradient(180deg, #000000,#7379ce,#ccd5ff);/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */                                             
     .tip {
       flex-direction: row-reverse;
       &::after {
@@ -133,28 +133,35 @@
     h3 {
       margin: 16px 0;
       text-align: center;
-      font-size: 30px;
+      font-size: 50px;
     }
     p {
       max-width: 1000px;
       padding: 0 24px;
       margin: 24px auto;
-      font-size: 14px;
-      color: #888;
+      color: rgba(255, 255, 255, 0.4);
       text-align: center;
+      font-size: 20px;
     }
 
     .websites {
-      padding: 24px;
+      padding: 24px 90px;
       &-item {
         display: flex;
+        align-items: center;
+        column-gap: 12px;
         padding: 12px;
         margin-bottom: 12px;
         overflow: hidden;
-        column-gap: 12px;
         border: 1px solid rgba(255, 255, 255, 0.2);
         border-radius: 4px;
         cursor: pointer;
+        transition: all 0.2s;
+
+        &:hover {
+          // box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(255, 255, 255, 0.3) 0px 18px 36px -18px inset;
+          background-color: rgba(0, 0, 0, 0.1);
+        }
 
         &-img {
           width: 120px;
@@ -165,11 +172,13 @@
           flex: 1;
         }
         &-title {
+          margin-bottom: 4px;
           font-weight: 800;
         }
 
         &-desc {
-          color: #888;
+          // color: #888;
+          font-size: 14px;
         }
       }
 
@@ -191,5 +200,6 @@
 
   .footer {
     height: 400px;
+    background-color: #ccd5ff;
   }
 }
