--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -182,6 +182,11 @@
         &-desc {
           // color: #888;
           font-size: 14px;
+          display: -webkit-box;
+          -webkit-line-clamp: 3;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
 
@@ -284,6 +289,54 @@
         background-size: 200px 200px;
         background-position: -114px -104px;
         transform: scale(0.6);
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .home {
+    .main {
+      &-title {
+        h1 {
+          font-size: 32px;
+        }
+        &-desc {
+          max-width: 200px;
+          font-size: 14px;
+          line-height: 24px;
+        }
+        &-1 {
+          top: 40px;
+          left: 32px;
+        }
+        &-2 {
+          right: 32px;
+          bottom: 40px;
+        }
+      }
+    }
+
+    .images {
+      &-title {
+        &-text {
+          font-size: 24px;
+          line-height: 30px;
+        }
+      }
+    }
+
+    .about {
+      h3 {
+        font-size: 18px;
+      }
+      p {
+        font-size: 14px;
+      }
+
+      .websites {
+        padding: 12px 12px;
       }
     }
   }
