--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -291,6 +291,21 @@
         transform: scale(0.6);
       }
     }
+
+    &-contact {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      column-gap: 8px;
+      font-size: 12px;
+      color: rgba(255, 255, 255, 0.9);
+
+      img {
+        width:20px;
+        height: 20px;
+        cursor: pointer;
+      }
+    }
   }
 }
 
