--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -2,7 +2,8 @@
   width: 100%;
   height: 100%;
   background-color: #000000;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   .tip {
     display: flex;
     align-items: center;
@@ -211,9 +212,10 @@
     width: 50px;
     height: 50px;
     border-radius: 25px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    position: relative;
+    // position: absolute;
+    // bottom: 400px;
+    // right: 0;
     z-index: 1;
 
     /* 发光效果 */
@@ -266,6 +268,7 @@
   .footer {
     position: relative;
     height: 400px;
+    margin-top: -50px;
     background-color: #ccd5ff;
     overflow: hidden;
     text-align: center;
