fix: :wrench: 增加路径别名

--- a/src/pages/home/components/footer-grass/index.module.less
+++ b/src/pages/home/components/footer-grass/index.module.less
@@ -1,6 +1,6 @@
-@grassPath: '../../../../assets/grass.svg';
-@flowerPath: '../../../../assets/flowers.svg';
-@birdPath: '../../../../assets/bird.svg';
+@grassPath: '@/assets/grass.svg';
+@flowerPath: '@/assets/flowers.svg';
+@birdPath: '@/assets/bird.svg';
 
 @birdFly: -10px -5px;
 @birdLeft: -114px -10px;
