--- a/src/pages/home/index.module.less
+++ b/src/pages/home/index.module.less
@@ -288,7 +288,7 @@
         position: absolute;
         top: -31px;
         right: 3px;
-        background-image: url(../../assets/bird.svg);
+        background-image: url(@/assets/bird.svg);
         background-size: 200px 200px;
         background-position: -114px -104px;
         transform: scale(0.6);
